--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header">
-        <nav class="menu_header container">
+        <nav class="menu_header container wrapper">
             <ul class="iconleft">
                 <li class="logo"><a href="index.html"><img src="img/logo.svg" alt="logo"></a></li>
                 <li class="loop"><a href="product.html" target="_blank"><img src="img/loop.svg" alt="loop"></a></li>
@@ -37,7 +37,7 @@
                         <div class="mega-item">
                             <h3 class="fashionMan">WOMAN</h3>
                             <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets & Coats</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets &amp;&nbsp;Coats</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Polos</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Shirts</a>
@@ -45,7 +45,7 @@
                         <div class="mega-item">
                             <h3 class="fashionMan">KIDS</h3>
                             <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets & Coats</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets &amp;&nbsp;Coats</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Denim</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Shirts</a>
@@ -63,54 +63,57 @@
             <div class="top_banner">
                 <div class="bannerMan"><img src="img/man.png" alt="man"></div>
                 <div class="bannerheading">
-                    <p class="bannerTextTop">THE BRAND</p>
-                    <p class="bannerTextBottom">OF LUXERIOUS <span class="fashion">FASHION</span></p>
+                    <h1 class="bannerTextTop">THE BRAND</h1>
+                    <p class="bannerTextBottom">OF&nbsp;LUXERIOUS <span class="fashion">FASHION</span></p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="content">
-        <section class="wrapper content container">
+    <div class="content wrapper">
+        <div class="container">
             <div class="forPeople">
                 <div class="forWomen">
-                    <div><img class="imgForWomen" src="img/forWomen.png" alt="forWomen"></div>
+                    <div><img class="imgFor" src="img/forWomen.png" alt="forWomen"></div>
                     <p class="textMen">30% OFF <br> <span class="fashion">FOR WOMEN</span></p>
                 </div>
                 <div class="forMen">
-                    <div><img class="imgForWomen" src="img/forMen.png" alt="forMen"></div>
+                    <div><img class="imgFor" src="img/forMen.png" alt="forMen"></div>
 
                     <p class="textMen">HOT DEAL <br> <span class="fashion">FOR MEN</span></p>
                 </div>
                 <div class="forKids">
-                    <div><img class="imgForWomen" src="img/forKids.png" alt="forKids"></div>
+                    <div><img class="imgFor" src="img/forKids.png" alt="forKids"></div>
                     <p class="textMen newArrivals">NEW ARRIVALS<br><span class="fashion">FOR KIDS</span></p>
                 </div>
+                <div class="accesories">
+                    <div><img class="imgFor imgForAccesories" src="img/accesories.png" alt="accesories"></div>
+                    <p class="textAccesories">LUXERIOUS &amp;&nbsp;TRENDY <br> <span class="fashion">ACCESORIES</span>
+                    </p>
+                </div>
             </div>
-            <div class="accesories">
-                <div><img src="img/accesories.png" alt="accesories"></div>
-                <p class="textMen textAccesories">LUXERIOUS & TRENDY <br> <span class="fashion">ACCESORIES</span></p>
-            </div>
-        </section>
+
+        </div>
     </div>
     <section class="wrapper cards_sec">
         <div class="container">
             <h3 class="fetured">Fetured Items</h3>
-            <p class="feturedShop">Shop for items based on what we featured in this week</p>
+            <p class="feturedShop">Shop for items based on&nbsp;what we&nbsp;featured in&nbsp;this week</p>
             <div class="card-flex">
                 <div class="card">
                     <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-1.png" alt="blue jacket">
                         <div class="text-box">
-                            <p class="card-name">ELLERY X M'O CAPSULE</p>
-                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-name">ELLERY X&nbsp;M&rsquo;O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian
+                                arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
                             <p class="card-price">$52.00</p>
                         </div>
                     </a>
                     <div class="add-box">
                         <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
-                            <p class="add-txt">Add to Cart</p>
+                            <p class="add-txt">Add to&nbsp;Cart</p>
                         </a>
                     </div>
                 </div>
@@ -118,16 +121,17 @@
                     <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-2.png" alt="blue jacket">
                         <div class="text-box">
-                            <p class="card-name">ELLERY X M'O CAPSULE</p>
-                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-name">ELLERY X&nbsp;M&rsquo;O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian
+                                arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
                             <p class="card-price">$52.00</p>
                         </div>
                     </a>
                     <div class="add-box">
                         <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
-                            <p class="add-txt">Add to Cart</p>
+                            <p class="add-txt">Add to&nbsp;Cart</p>
                         </a>
                     </div>
                 </div>
@@ -135,16 +139,17 @@
                     <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-3.png" alt="blue jacket">
                         <div class="text-box">
-                            <p class="card-name">ELLERY X M'O CAPSULE</p>
-                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-name">ELLERY X&nbsp;M&rsquo;O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian
+                                arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
                             <p class="card-price">$52.00</p>
                         </div>
                     </a>
                     <div class="add-box">
                         <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
-                            <p class="add-txt">Add to Cart</p>
+                            <p class="add-txt">Add to&nbsp;Cart</p>
                         </a>
                     </div>
                 </div>
@@ -152,16 +157,17 @@
                     <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-4.png" alt="blue jacket">
                         <div class="text-box">
-                            <p class="card-name">ELLERY X M'O CAPSULE</p>
-                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-name">ELLERY X&nbsp;M&rsquo;O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian
+                                arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
                             <p class="card-price">$52.00</p>
                         </div>
                     </a>
                     <div class="add-box">
                         <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
-                            <p class="add-txt">Add to Cart</p>
+                            <p class="add-txt">Add to&nbsp;Cart</p>
                         </a>
                     </div>
                 </div>
@@ -169,16 +175,17 @@
                     <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-5.png" alt="blue jacket">
                         <div class="text-box">
-                            <p class="card-name">ELLERY X M'O CAPSULE</p>
-                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-name">ELLERY X&nbsp;M&rsquo;O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian
+                                arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
                             <p class="card-price">$52.00</p>
                         </div>
                     </a>
                     <div class="add-box">
                         <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
-                            <p class="add-txt">Add to Cart</p>
+                            <p class="add-txt">Add to&nbsp;Cart</p>
                         </a>
                     </div>
                 </div>
@@ -186,16 +193,17 @@
                     <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-6.png" alt="blue jacket">
                         <div class="text-box">
-                            <p class="card-name">ELLERY X M'O CAPSULE</p>
-                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-name">ELLERY X&nbsp;M&rsquo;O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian
+                                arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
                             <p class="card-price">$52.00</p>
                         </div>
                     </a>
                     <div class="add-box">
                         <a class="add" href="#">
                             <img src="img/add.svg" alt="add">
-                            <p class="add-txt">Add to Cart</p>
+                            <p class="add-txt">Add to&nbsp;Cart</p>
                         </a>
                     </div>
                 </div>
@@ -209,11 +217,11 @@
     </section>
     <div class="info">
         <div class="info container">
-            <div class="info_container">
+            <div class="info_container wrapper">
                 <article class="infoCards">
                     <div class="delivery delivery_car"><img src="img/delivery.svg" alt="delivery"></div>
                     <h3 class="textHeadingInfo">Free delivery</h3>
-                    <p class="textInfo">Worldwide delivery on all. Authorit tively morph <br> next-generation innov
+                    <p class="textInfo">Worldwide delivery on&nbsp;all. Authorit tively morph <br> next-generation innov
                         tion
                         with
                         extensive models.
@@ -221,8 +229,8 @@
                 </article>
                 <article class="infoCards">
                     <div class="delivery delivery_sales"><img src="img/sales.svg" alt="delivery"></div>
-                    <h3 class="textHeadingInfo">Sales & discounts</h3>
-                    <p class="textInfo">Worldwide delivery on all. Authorit tively morph <br> next-generation innov
+                    <h3 class="textHeadingInfo">Sales &amp;&nbsp;discounts</h3>
+                    <p class="textInfo">Worldwide delivery on&nbsp;all. Authorit tively morph <br> next-generation innov
                         tion
                         with
                         extensive models.
@@ -231,7 +239,7 @@
                 <article class="infoCards">
                     <div class="delivery delivery_QA"><img src="img/QA.svg" alt="delivery"></div>
                     <h3 class="textHeadingInfo">Quality assurance</h3>
-                    <p class="textInfo">Worldwide delivery on all. Authorit tively morph <br> next-generation innov
+                    <p class="textInfo">Worldwide delivery on&nbsp;all. Authorit tively morph <br> next-generation innov
                         tion
                         with
                         extensive models.
@@ -240,15 +248,16 @@
             </div>
         </div>
     </div>
-    <div class="footer">
+    <footer class="footer">
         <div class="background_sea">
             <div class="footer_top container">
                 <div class="footer_flex">
                     <figure class="footer_top_left">
                         <div><img src="img/woman.png" alt="women"></div>
-                        <div class="quote">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <i> a pulvinar
+                        <div class="quote">&laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi, <i>
+                                a&nbsp;pulvinar
                                 purus <br>
-                                condimentum</i>“</div>
+                                condimentum</i>&raquo;</div>
                     </figure>
                     <div class="footer_top_right">
                         <div class="subscribe"><span class="subscribe_bolt">SUBSCRIBE</span> <br>
@@ -262,16 +271,16 @@
         </div>
         <div class="footer_bottom">
             <div class="footer_bottom container">
-                <p class="rights">© 2021 Brand All Rights Reserved.</p>
-                <div class="icons">
+                <p class="rights">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
+                <nav class="icons">
                     <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-pinterest-p"></i></a>
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
-                </div>
+                </nav>
             </div>
         </div>
-    </div>
+    </footer>
 
 
 
