--- a/product.html
+++ b/product.html
@@ -37,7 +37,7 @@
                         <div class="mega-item">
                             <h3 class="fashionMan">WOMAN</h3>
                             <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets & Coats</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets &amp;&nbsp;Coats</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Polos</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Shirts</a>
@@ -45,7 +45,7 @@
                         <div class="mega-item">
                             <h3 class="fashionMan">KIDS</h3>
                             <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets & Coats</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets &amp;&nbsp;Coats</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Denim</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Shirts</a>
@@ -86,7 +86,7 @@
                 competencies rather than exceptional portals. </p>
             <p class="price">$561</p>
             <hr class="grey_hr">
-            <div class="selector">
+            <form class="selector">
                 <details class="open_trend">
                     <summary class="sumsel">
                         <div class="trend_flex">
@@ -94,9 +94,9 @@
                         </div>
                     </summary>
                     <div class="open_check">
-                        <label class="check"><input type="checkbox">&nbsp Orange</label>
-                        <label class="check"><input type="checkbox">&nbsp Green</label>
-                        <label class="check"><input type="checkbox">&nbsp Blue</label>
+                        <label class="check"><input type="checkbox"> Orange</label>
+                        <label class="check"><input type="checkbox"> Green</label>
+                        <label class="check"><input type="checkbox"> Blue</label>
                     </div>
                 </details>
                 <details class="open_size">
@@ -106,10 +106,10 @@
                         </div>
                     </summary>
                     <div class="open_size_check">
-                        <label class="check"><input type="checkbox">&nbsp XS</label>
-                        <label class="check"><input type="checkbox">&nbsp S</label>
-                        <label class="check"><input type="checkbox">&nbsp M</label>
-                        <label class="check"><input type="checkbox">&nbsp L</label>
+                        <label class="check"><input type="checkbox"> XS</label>
+                        <label class="check"><input type="checkbox"> S</label>
+                        <label class="check"><input type="checkbox"> M</label>
+                        <label class="check"><input type="checkbox"> L</label>
                     </div>
                 </details>
                 <details class="open_price">
@@ -119,16 +119,16 @@
                         </div>
                     </summary>
                     <div class="open_price_check">
-                        <label class="check"><input type="checkbox">&nbsp 100$</label>
-                        <label class="check"><input type="checkbox">&nbsp 500$</label>
-                        <label class="check"><input type="checkbox">&nbsp 1000$</label>
+                        <label class="check"><input type="checkbox"> 100$</label>
+                        <label class="check"><input type="checkbox"> 500$</label>
+                        <label class="check"><input type="checkbox"> 1000$</label>
                     </div>
                 </details>
-            </div>
+            </form>
             <div class="add_product_box">
                 <a class="add_product" href="">
                     <i class="fa-solid fa-cart-shopping"></i>
-                    <p class="product-txt">Add to Cart</p>
+                    <p class="product-txt">Add to&nbsp;Cart</p>
                 </a>
             </div>
         </div>
@@ -137,19 +137,20 @@
         <div class="container">
             <div class="card-flex">
                 <div class="card">
-                    <a class="card-link" href="">
+                    <a class="card-link" href="#">
                         <img class="card-pic" src="img/product-1.png" alt="blue jacket">
                         <div class="text-box">
-                            <p class="card-name">ELLERY X M'O CAPSULE</p>
-                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-name">ELLERY X&nbsp;M&rsquo;O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian
+                                arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
                             <p class="card-price">$52.00</p>
                         </div>
                     </a>
                     <div class="add-box">
                         <a class="add" href="">
                             <img src="img/add.svg" alt="add">
-                            <p class="add-txt">Add to Cart</p>
+                            <p class="add-txt">Add to&nbsp;Cart</p>
                         </a>
                     </div>
                 </div>
@@ -157,33 +158,35 @@
                     <a class="card-link" href="">
                         <img class="card-pic" src="img/product-2.png" alt="blue jacket">
                         <div class="text-box">
-                            <p class="card-name">ELLERY X M'O CAPSULE</p>
-                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-name">ELLERY X&nbsp;M&rsquo;O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian
+                                arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
                             <p class="card-price">$52.00</p>
                         </div>
                     </a>
                     <div class="add-box">
                         <a class="add" href="">
                             <img src="img/add.svg" alt="add">
-                            <p class="add-txt">Add to Cart</p>
+                            <p class="add-txt">Add to&nbsp;Cart</p>
                         </a>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card last_card">
                     <a class="card-link" href="">
                         <img class="card-pic" src="img/product-3.png" alt="blue jacket">
                         <div class="text-box">
-                            <p class="card-name">ELLERY X M'O CAPSULE</p>
-                            <p class="card-desc">Known for her sculptural takes on traditional tailoring, Australian
-                                arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+                            <p class="card-name">ELLERY X&nbsp;M&rsquo;O CAPSULE</p>
+                            <p class="card-desc">Known for her sculptural takes on&nbsp;traditional tailoring,
+                                Australian
+                                arbiter of&nbsp;cool Kym Ellery teams up&nbsp;with Moda Operandi.</p>
                             <p class="card-price">$52.00</p>
                         </div>
                     </a>
                     <div class="add-box">
                         <a class="add" href="">
                             <img src="img/add.svg" alt="add">
-                            <p class="add-txt">Add to Cart</p>
+                            <p class="add-txt">Add to&nbsp;Cart</p>
                         </a>
                     </div>
                 </div>
@@ -197,9 +200,10 @@
                 <div class="footer_flex">
                     <figure class="footer_top_left">
                         <div><img src="img/woman.png" alt="women"></div>
-                        <div class="quote">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <i> a pulvinar
+                        <div class="quote">&laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi, <i>
+                                a&nbsp;pulvinar
                                 purus <br>
-                                condimentum</i>“</div>
+                                condimentum</i>&raquo;</div>
                     </figure>
                     <div class="footer_top_right">
                         <div class="subscribe"><span class="subscribe_bolt">SUBSCRIBE</span> <br>
@@ -213,13 +217,13 @@
         </div>
         <div class="footer_bottom">
             <div class="footer_bottom container">
-                <p class="rights">© 2021 Brand All Rights Reserved.</p>
-                <div class="icons">
+                <p class="rights">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
+                <nav class="icons">
                     <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-pinterest-p"></i></a>
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
-                </div>
+                </nav>
             </div>
         </div>
     </div>
