--- a/registration.html
+++ b/registration.html
@@ -37,7 +37,7 @@
                         <div class="mega-item">
                             <h3 class="fashionMan">WOMAN</h3>
                             <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets & Coats</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets &amp;&nbsp;Coats</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Polos</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Shirts</a>
@@ -45,7 +45,7 @@
                         <div class="mega-item">
                             <h3 class="fashionMan">KIDS</h3>
                             <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets & Coats</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets &amp;&nbsp;Coats</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Denim</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Shirts</a>
@@ -80,7 +80,8 @@
                 <p class="name_for_reg login">Login details</p>
                 <input type="email" placeholder="Email" class="adress">
                 <input type="password" placeholder="Password" class="adress">
-                <p class="for_password">Please use 8 or more characters, with at least 1 number and a <br> mixture of
+                <p class="for_password">Please use 8&nbsp;or more characters, with at&nbsp;least 1&nbsp;number and a
+                    <br> mixture of
                     uppercase and lowercase letters</p>
                 <button class="join_box">
                     <a class="join" href="#">
@@ -91,11 +92,12 @@
             </form>
             <div class="registration_info">
                 <h4 class="loyalty">LOYALTY HAS ITS PERKS</h4>
-                <p class="loyalty loyalty_perks">Get in on the loyalty program where you can earn points and <br> unlock
+                <p class="loyalty loyalty_perks">Get in&nbsp;on&nbsp;the loyalty program where you can earn points and
+                    <br> unlock
                     serious
                     perks. Starting with
                     these
-                    as soon as you join:</p>
+                    as&nbsp;soon as&nbsp;you join:</p>
                 <div class="mark_box">
                     <img src="img/mark.svg" alt="mark">
                     <p class="loyalty loyalty_mark"> 15% off welcome offer
@@ -103,22 +105,22 @@
                 </div>
                 <div class="mark_box">
                     <img src="img/mark.svg" alt="mark">
-                    <p class="loyalty loyalty_mark"> Free shipping, returns and exchanges on all
+                    <p class="loyalty loyalty_mark"> Free shipping, returns and exchanges on&nbsp;all
                     </p>
                 </div>
                 <div class="mark_box">
                     <img src="img/mark.svg" alt="mark">
-                    <p class="loyalty loyalty_mark"> $10 off a purchase on your birthday
+                    <p class="loyalty loyalty_mark"> $10 off a&nbsp;purchase on&nbsp;your birthday
                     </p>
                 </div>
                 <div class="mark_box">
                     <img src="img/mark.svg" alt="mark">
-                    <p class="loyalty loyalty_mark"> Early access to products
+                    <p class="loyalty loyalty_mark"> Early access to&nbsp;products
                     </p>
                 </div>
                 <div class="mark_box">
                     <img src="img/mark.svg" alt="mark">
-                    <p class="loyalty loyalty_mark"> Exclusive offers & rewards
+                    <p class="loyalty loyalty_mark"> Exclusive offers &amp;&nbsp;rewards
                     </p>
                 </div>
             </div>
@@ -130,9 +132,10 @@
                 <div class="footer_flex">
                     <figure class="footer_top_left">
                         <div><img src="img/woman.png" alt="women"></div>
-                        <div class="quote">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <i> a pulvinar
+                        <div class="quote">&laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi, <i>
+                                a&nbsp;pulvinar
                                 purus <br>
-                                condimentum</i>“</div>
+                                condimentum</i>&raquo;</div>
                     </figure>
                     <div class="footer_top_right">
                         <div class="subscribe"><span class="subscribe_bolt">SUBSCRIBE</span> <br>
@@ -146,13 +149,13 @@
         </div>
         <div class="footer_bottom">
             <div class="footer_bottom container">
-                <p class="rights">© 2021 Brand All Rights Reserved.</p>
-                <div class="icons">
+                <p class="rights">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
+                <nav class="icons">
                     <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-pinterest-p"></i></a>
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
-                </div>
+                </nav>
             </div>
         </div>
     </div>
