--- a/cart.html
+++ b/cart.html
@@ -37,7 +37,7 @@
                         <div class="mega-item">
                             <h3 class="fashionMan">WOMAN</h3>
                             <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets & Coats</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets &amp;&nbsp;Coats</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Polos</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Shirts</a>
@@ -45,7 +45,7 @@
                         <div class="mega-item">
                             <h3 class="fashionMan">KIDS</h3>
                             <a class="mega-link" href="Catalog.html" target="_blank">Accessories</a>
-                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets & Coats</a>
+                            <a class="mega-link" href="Catalog.html" target="_blank">Jackets &amp;&nbsp;Coats</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Denim</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">T-Shirts</a>
                             <a class="mega-link" href="Catalog.html" target="_blank">Shirts</a>
@@ -79,7 +79,7 @@
                             <p class="cart">Price: <span class="cart_price">$300</span></p>
                             <p class="cart">Color: Red</p>
                             <p class="cart">Size: Xl </p>
-                            <p class="cart">Quantity: <input class="quantity" type="text"></p>
+                            <p class="cart">Quantity: <input class="quantity" type="number" min="1"></p>
                         </div>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                             <p class="cart">Price: <span class="cart_price">$300</span></p>
                             <p class="cart">Color: Red</p>
                             <p class="cart">Size: Xl </p>
-                            <p class="cart">Quantity: <input class="quantity" type="text"></p>
+                            <p class="cart">Quantity: <input class="quantity" type="number" min="1"></p>
                         </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                     </button>
                 </div>
             </div>
-            <div>
+            <div class="shipping-box">
                 <form class="form_quote" action="">
                     <p class="shipping">SHIPPING ADRESS</p>
                     <input type="text" placeholder="Bangladesh" class="adress">
@@ -119,7 +119,7 @@
                     <input type="text" placeholder="Postcode / Zip" class="adress">
                     <button class="quote_box">
                         <a class="get_quote" href="#">
-                            <p class="quote-txt">GET A QUOTE</p>
+                            <p class="quote-txt">GET A&nbsp;QUOTE</p>
                         </a>
                     </button>
                 </form>
@@ -135,7 +135,7 @@
                     <hr class="proceed_hr">
                     <button class="procced_box">
                         <a class="procced" href="#">
-                            <p class="procced-txt">PROCEED TO CHECKOUT</p>
+                            <p class="procced-txt">PROCEED TO&nbsp;CHECKOUT</p>
                         </a>
                     </button>
                 </div>
@@ -148,9 +148,10 @@
                 <div class="footer_flex">
                     <figure class="footer_top_left">
                         <div><img src="img/woman.png" alt="women"></div>
-                        <div class="quote">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <i> a pulvinar
+                        <div class="quote">&laquo;Vestibulum quis porttitor dui! Quisque viverra nunc&nbsp;mi, <i>
+                                a&nbsp;pulvinar
                                 purus <br>
-                                condimentum</i>“</div>
+                                condimentum</i>&raquo;</div>
                     </figure>
                     <div class="footer_top_right">
                         <div class="subscribe"><span class="subscribe_bolt">SUBSCRIBE</span> <br>
@@ -164,13 +165,13 @@
         </div>
         <div class="footer_bottom">
             <div class="footer_bottom container">
-                <p class="rights">© 2021 Brand All Rights Reserved.</p>
-                <div class="icons">
+                <p class="rights">&copy;&nbsp;2021 Brand All Rights Reserved.</p>
+                <nav class="icons">
                     <a href=""><i class="fa-brands fa-facebook-f"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
                     <a href=""><i class="fa-brands fa-pinterest-p"></i></a>
                     <a href=""><i class="fa-brands fa-twitter"></i></a>
-                </div>
+                </nav>
             </div>
         </div>
     </div>
